--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob ,edida para o cliente. Explore o mundo na sua velocidade com a Bikcraft">
   <title>Bikcraft - Bicicletas Elétricas</title>
+  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <header class="header-bg">
     <div class="header">
-      <a href="./">
+      <a href="./"> <!--Ponto barra informa que ao clicar nesse link ela irá para o index.html-->
         <img src="./img/bikcraft.svg" alt="Bikcraft">
       </a>
       <nav aria-label="primaria">
