--- a/index.html
+++ b/index.html
@@ -91,5 +91,18 @@
       </div>
     </div>
   </article>
+  <section class="parceiros" area-label="Nossos parceiros">
+    <h2 class="font-1-xxl container">nossos parceiros<span class="cor-p1">.</span> </h2>
+    <ul>
+      <li><img src="./img/parceiros/caravan.svg" alt="Caravan"></li>
+      <li><img src="./img/parceiros/ranek.svg" alt="ranek"></li>
+      <li><img src="./img/parceiros/handel.svg" alt="handel.svg"></li>
+      <li><img src="./img/parceiros/dogs.svg" alt="dogs.svg"></li>
+      <li><img src="./img/parceiros/lescone.svg" alt="lescone.svg"></li>
+      <li><img src="./img/parceiros/flexblog.svg" alt="flexblog.svg"></li>
+      <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast.svg"></li>
+      <li><img src="./img/parceiros/surfbot.svg" alt="surfbot.svg"></li>
+    </ul>
+  </section>
 </body>
 </html>
