--- a/index.html
+++ b/index.html
@@ -118,5 +118,35 @@
       <span class="font-1m-b cor-p4">Ana Júlia</span>
     </div>
   </section>
+    <article class="seguros-bg">
+      <div class="seguros container">
+        <h2 class="font-1-xxl cor-0">seguros<span class="cor-p1">.</span></span></h2>
+        
+        <div class="seguro-item">
+          <h3 class="font-1-xl cor-6">PRATA</h3>
+          <span class="font-1-xl cor-0">R$ 199 </span><span class="font-xs cor-6">mensal</span>
+          <ul class="font-2-m cor-0">
+            <li>Duas trocas por ano</li>
+            <li>Assistência técnica</li>
+            <li>Suporte 08h às 18h</li>
+            <li>Cobrtura estadual</li>
+          </ul>
+          <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+        </div>
+
+        <div class="seguro-item">
+          <h3 class="font-1-xl cor-6">OURO</h3>
+          <span class="font-1-xl cor-0">R$ 299 </span><span class="font-xs cor-6">mensal</span>
+          <ul class="font-2-m cor-0">
+            <li>Cinco trocas por ano</li>
+            <li>Assistência especial</li>
+            <li>Suporte 24h</li>
+            <li>Cobrtura nacional</li>
+            <li>Acesso ao club Bikcraft</li>
+          </ul>
+          <a class="botao" href="./orcamento.html">Inscreva-se</a>
+        </div>
+      </div>
+    </article>
 </body>
 </html>
