Criação da seção de bicicletas

--- a/termos.html
+++ b/termos.html
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Fira+Sans:wght@400;700&family=Josefin+Sans:wght@100&family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="termos">
   <header class="header-bg">
     <div class="header container">
       <a href="./"> <!--Ponto barra informa que ao clicar nesse link ela irá para o index.html-->
