--- a/contato.html
+++ b/contato.html
@@ -44,7 +44,7 @@
             <p>Rio de Janeiro - RJ</p>
             <p>Brasil - Terra - Via Láctea</p>
           </div>
-          <address class="contatos-meios font-2-s cor-4">
+          <address class="contato-meios font-2-s cor-4">
             <a href="mailto:elisafajunior@gmail.com">elisafajunior@gamil.com</a>
             <a href="mailto:elisafajunior@gmail.com">elisafajunior@gamil.com</a>
             <a href="tel:+5584998167999">+55 84 998167999</a>
@@ -65,15 +65,15 @@
               <label for="telefone">Telefone</label>
               <input type="text" id="telefone" name="telefone" placeholder="(99) 99999-9999">
             </div>
-            <div>
+            <div class="col-2" >
               <label for="email">Email</label>
               <input type="email" id="email" name="email" placeholder="teste@teste.com">
             </div>
-            <div>
+            <div class="col-2" >
               <label for="mensagem">Mensagem</label>
               <textarea rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
             </div>
-            <button class="botao">Enviar Mensagem</button>
+            <button class="botao col-2">Enviar Mensagem</button>
           </form>
         </section>
       </div>
