--- a/contato.html
+++ b/contato.html
@@ -78,6 +78,40 @@
         </section>
       </div>
     </main>
+    <article class="lojas container">
+      <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
+      <div class="lojas-item">
+        <img src="./img/lojas/rj.jpg" alt="marcando o endereço">
+        <div class="lojas-conteudo">
+          <h3 class="font-1-xl">Rio de Janeiro</h3>
+          <div class="lojas-dados font-2-s cor-8">
+            <p>Rua Ali Perto, 25</p>
+            <p>Rio de Janeiro - RJ</p>
+          </div>
+          <div class="lojas-dados font-2-s cor-8">
+            <a href="mailto:elisafajunior@gmail.com">rj@gamil.com</a>
+            <a href="tel:+5584998167999">+55 84 998167999</a>
+          </div>
+          <p class="lojas-tempo font-1-s"> <img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+        </div>
+      </div>
+      
+      <div class="lojas-item">
+        <img src="./img/lojas/sp.jpg" alt="marcando o endereço">
+        <div class="lojas-conteudo">
+          <h3 class="font-1-xl">São Paulo</h3>
+          <div class="lojas-dados font-2-s cor-8">
+          <p>Rua Ali Perto, 25</p>
+          <p>São Paulo - SP</p>
+        </div>
+        <div class="lojas-dados font-2-s cor-8">
+          <a href="mailto:elisafajunior@gmail.com">rj@gamil.com</a>
+            <a href="tel:+5584998167999">+55 84 998167999</a>
+        </div>
+        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg à dom</p>
+      </div>
+      </div>
+    </article>
   <footer class="footer-bg">
     <div class="footer conainer">
       <img class="footer-marca" src="./img/bikcraft.svg" alt="">
