--- a/seguros.html
+++ b/seguros.html
@@ -49,7 +49,7 @@
               <li>Suporte 08h às 18h</li>
               <li>Cobrtura estadual</li>
             </ul>
-            <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
+            <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
           </div>
   
           <div class="seguro-item">
@@ -62,7 +62,7 @@
               <li>Cobrtura nacional</li>
               <li>Acesso ao club Bikcraft</li>
             </ul>
-            <a class="botao" href="./orcamento.html">Inscreva-se</a>
+            <a class="botao" href="./orcamento.html?tipo=seguro&produto=ouro">Inscreva-se</a>
           </div>
         </div>  
     </main>
