--- a/seguros.html
+++ b/seguros.html
@@ -39,8 +39,8 @@
           <h1 class="font-1-xxl cor-0">você seguro<span class="cor-p1">.</span></h1>
         </div>
       </div>
-        <div class="seguros container">
-          <div class="seguro-item">
+        <div class="seguros container" >
+          <div class="seguro-item fadeInLeft" data-anime="200">
             <h3 class="font-1-xl cor-6">PRATA</h3>
             <span class="font-1-xl cor-0">R$ 199 </span><span class="font-xs cor-6">mensal</span>
             <ul class="font-2-m cor-0">
@@ -52,7 +52,7 @@
             <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
           </div>
   
-          <div class="seguro-item">
+          <div class="seguro-item fadeInRight" data-anime="400">
             <h3 class="font-1-xl cor-6">OURO</h3>
             <span class="font-1-xl cor-0">R$ 299 </span><span class="font-xs cor-6">mensal</span>
             <ul class="font-2-m cor-0">
@@ -169,6 +169,7 @@
       <p class="footer-copy font-2-m cor-6">Bikcraft - Alguns direitos reservados.</p>
     </div>
   </footer>
-    <script src="./js/script.js"></script>
+  <script src="./js/plugins/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
